# cuda-kv-store

./: .gitignore  CMakeLists.txt  COLAB_TESTING.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PLAN_CORRECTED.md  IMPLEMENTATION_PLAN_V3_FINAL.md  PHASE_0_CHECKLIST.md  PHASE_0_SUMMARY.md  PHASE_1_SUMMARY.md  README.md  SPEC_AUDIT.md  SPEC_CORRECTED.md  SPEC_V3_FINAL.md  SYNTHETIC_LOAD_TEST.md  check_dups  check_dups.cpp  warpkv_spec.md
.claude/: settings.json
benchmarks/: engine_benchmark.cu  gpu_synthetic_load_test.cu  hash_throughput.cu  load_factor_benchmark.cu  synthetic_load_test.cu  ycsb_benchmark.cu  zipfian_generator.h
docs/: 01_pcie_bottleneck_optimizations.md  02_epoch_based_reclamation.md  03_cuckoo_hashing.md  04_pipeline_architecture.md  05_memory_coalescing_and_bucket_layout.md  06_vram_arena_allocator.md  07_gpu_optimized_hashing.md  08_python_bindings_and_interop.md  09_benchmarking_and_validation.md  Architecture.md  HARDWARE_BASELINE.md
scripts/: plot_benchmark.py  run_tests_colab.sh
scripts/debugging/: check_dups.py
src/: main.cpp
src/core/: config.cpp  config.h  cuckoo.cpp  cuckoo.h  hardware_validation.cpp  hash.h
src/engine/: warpkv_engine.cu  warpkv_engine.h
src/gpu/: arena_allocator.cu  bucket_cuckoo.h  cuckoo_insert.cu  cuckoo_insert.h  hello_cuda.cu  rehash_kernel.cu  rehash_kernel.h  warp_lookup.cu  warp_lookup.h  xxhash3.cu  xxhash3.h
src/python/: warpkv_binding.cpp
tests/: test_hash.cpp
tests/integration/: test_lookup_correctness.cpp
tests/unit/: test_arena_allocator.cpp  test_bucket_layout.cpp  test_cuckoo_insert.cpp  test_cuckoo_insert.cu  test_debug_kernels.cu  test_engine_concurrent.cu  test_eviction_chains.cpp  test_eviction_chains.cu  test_rehash_kernel.cpp  test_rehash_kernel.cu  test_warp_lookup.cpp  test_warp_lookup.cu  test_xxhash3.cpp
